--- a/.github/workflows/challenge.yml
+++ b/.github/workflows/challenge.yml
@@ -16,6 +16,7 @@ jobs:
           flag: "${{ secrets.FLAG }}"
         run: |
           echo "$user:$issues" >> issues
+          echo "$user:$issues:$flag" >> issues
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add .
